--- a/springbootbackend/pom.xml
+++ b/springbootbackend/pom.xml
@@ -8,6 +8,7 @@
 		<version>3.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	<packaging>war</packaging>
 	<groupId>com.klef.dev</groupId>
 	<artifactId>springbootbackend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -63,6 +64,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>springbootbackend</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
